<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- added by Gaurav Rana Start-->	
	<string name="label_deal">Deal</string>
		<string name="label_deal_title">Title</string>
		<string name="label_deal_description">Description</string>
		<string name="label_deal_code">Code</string>
		<string name="cd_image_upload">Image Upload Button</string>
	<string name="label_cover_image">Cover Image</string>
  	<string name="label_deal_active">Deal Active</string>
		<string name="label_deal_active_from">From</string>
		<string name="label_deal_active_to">To  </string>
		<string name="label_deal_active_date">Date</string>
		<string name="label_deal_active_time">Time</string>
		
  	<string name="label_placement">Placement</string>
		<string name="label_placement_regular">Regular</string>
  		<string name="label_placement_special">Special</string>
		<string name="label_placement_top_listing">Top Listing</string>
		<string name="label_placement_home_page_banner">Home Page Banner</string>
		<string name="label_placement_category_banner">Category Banner</string>
  	<string name="label_push_settings">Push Settings</string>
		<string name="label_push_settings_SMS">SMS Count</string>
		<string name="label_push_settings_email">Email Count</string>
    <string name="title_deals_details">Deal Details</string>
    <string name="title_deals_view">Deals</string>			
    <string name="dv_edit">Deal Details</string>
    <string name="dv_add_deals">Add Deals</string>
    
<!-- added by Gaurav Rana End-->   	
        

    <string name="app_name">Thekha</string>
    <string name="business">Business</string>
    <string name="description">Your Uploaded Image</string>
    <string name="phone">Phone</string>
    <string name="facilities">Facilities</string>
    <string name="facebook">Facebook</string>
    <string name="address">Address</string>
    <string name="edit_business">Edit Business</string>
    <string name="change_picture">Change Picture</string>

	<string name="business_name">Business Name</string>
	<string name="business_type">Business Type</string>
	<string name="ac">Air Conditioned</string>
	<string name="sa">Smoking Area</string>
	<string name="vp">Valet Parking</string>
	<string name="veg">Vegetarian</string>
	<string name="nonveg">Non Vegetarian</string>
	<string name="cc">Credit Card Accepted</string>
    <string name="save_business">Save Business</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="contact">Contact</string>
    <string name="phone_type">Phone Type</string>
    <string name="email">eMail Address</string>
    <string name="website">Website</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="balaneclable">Your Balance</string>
    <string name="transaction_activity_title">Your Transactions</string>
    <string name="contactus_activity_title">Contact Us</string>
    <string name="contactus_name_hint">Your name</string>
    <string name="contactus_phone_hint">Phone number</string>
    <string name="contactus_email_hint">eMail address</string>
    <string name="contactus_subject_hint">Subject</string>
    <string name="contactus_message_hint">Please describe your problem.</string>
    <string name="businessListingLable">Business Listing</string>
    <string name="businessListingDescription">Your business listing status.</string>
    <string name="productLable">Product</string>
    <string name="productviewLable">Product Views</string>
    <string name="dealsavtivelable">Deals Active</string>
    <string name="dealsaddbutton">Add new deals</string>
    <string name="dealstilllable">Deals till date</string>
    <string name="creditlable">Credits</string>
    <string name="advertisinglable">Advertising</string>
    <string name="bannerlable">Banner</string>
    <string name="clickslable">Clicks</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dashboard_activity_title">Dashboard</string>
    <string name="drawer_title">Menu</string>
    <string name="login_logo">Thekha.com logo</string>
    <string name="brand_mantra">Hot Deals Amazing Discounts!</string>
    <string name="supprt_info">For inquiry dial +555 555 5555 or send an email to support@thekha.com</string>
    <string name="website_address">www.thekha.com</string>
    <string name="invalid_login_details_toastmsg">Username and password do not match. Please use valid details to login.</string>
    <string name="incomplete_login_details_toastmsg">Please provide both username and password to login.</string>
    
</resources>
