<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
    
    <EditText
        android:id="@+id/contactus_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/contactus_name_hint" >
        <requestFocus />
    </EditText>
    
    <Spinner
        android:id="@+id/contactus_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Holo.Light.Spinner" />
    
    <EditText
        android:id="@+id/contactus_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/contactus_phone_hint" />
    
    <EditText
        android:id="@+id/contactus_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/contactus_email_hint" />
    
    <EditText
        android:id="@+id/contactus_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/contactus_subject_hint" />
    
    <EditText
        android:id="@+id/contactus_message"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:gravity="top"
        android:padding="4dp"
        android:hint="@string/contactus_message_hint" />
    
</LinearLayout>
