<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/editbusiness_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >



<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:orientation="vertical"
    tools:context=".ProfileActivity" >
    
    <TextView
        android:id="@+id/label_aed_deal"
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_deal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<!-- 	  	<TableRow
	  	    android:id="@+id/table_row_title"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="wrap_content"
	        android:layout_below="@+id/label_aed_deal" >
	  	    
	  	    <TextView
	  	        android:id="@+id/label_aed_deal_title"
	  	        android:layout_width="wrap_content"
	  	        android:layout_height="wrap_content"
	  	        android:text="@string/label_deal_title"
	  	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
 -->
 	  	    <EditText
	  	        android:id="@+id/edit_aed_deal_title"
	  	        android:layout_width="fill_parent"
	  	        android:layout_height="wrap_content"
	  	        android:ems="10"
	  	        android:hint="@string/label_deal_title" />
<!-- 	  	</TableRow>
	    	    
	   <TableRow
	        android:id="@+id/table_row_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/table_row_title" >
	       	
		    <TextView
		        android:id="@+id/label_aed_deal_description"
		        style=""
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_deal_description"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
 -->		     
		    <EditText
		        android:id="@+id/edit_aed_deal_description"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_deal_description" />
	
<!-- 	    </TableRow>
	    
	  	<TableRow
	        android:id="@+id/table_row_code"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/table_row_description" >
	       	
		    <TextView
		        android:id="@+id/label_aed_deal_code"
		        style=""
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_deal_code"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		     
 -->
 		    <EditText
		        android:id="@+id/edit_aed_deal_code"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_deal_code" >
	    	</EditText>
	        	        
<!-- 	    </TableRow>
 -->    
    <TextView
        android:id="@+id/label_aed_cover_image"
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_cover_image"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <ImageButton
	        android:id="@+id/iButton_aed_cover_image"
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/aed_upload_image_height"
	        android:src="@drawable/ic_launcher"
	        android:contentDescription="@string/cd_image_upload"/>
  	
    <TextView
        android:id="@+id/label_aed_deal_active"
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_deal_active"
        android:textAppearance="?android:attr/textAppearanceMedium" />

 	   	<TableRow
	        android:id="@+id/table_row_from"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	       	
		    <TextView
		        android:id="@+id/label_aed_deal_active_from"
		        style=""
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/label_deal_active_from"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <Button
		        android:id="@+id/button_aed_deal_active_fromDate"
		        style="@style/dateTimeText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/label_deal_active_date" />
		     
		    <Button
		        android:id="@+id/button_aed_deal_active_fromTime"
		        style="@style/dateTimeText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/label_deal_active_time" />

<!-- 		   
			<EditText
		        android:id="@+id/edit_aed_deal_active_fromDate"
		        android:layout_width="@dimen/aed_from_to_date_time"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top"
		        android:ems="10"
		        android:hint="@string/label_deal_active_date"
		        android:inputType="time" >

	    	</EditText>

		    <EditText
		        android:id="@+id/edit_aed_deal_active_fromTime"
		        android:layout_width="@dimen/aed_from_to_date_time"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_deal_active_time" >
	    	</EditText>
 -->	        	        
	    </TableRow>
	   	<TableRow
	        android:id="@+id/table_row_to"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	       	
		    <TextView
		        android:id="@+id/label_aed_deal_active_to"
		        style=""
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_deal_active_to"
		        android:layout_weight="1.5"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		     
		    <Button
		        android:id="@+id/button_aed_deal_active_toDate"
		        style="@style/dateTimeText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/label_deal_active_date" />
		     
		    <Button
		        android:id="@+id/button_aed_deal_active_toTime"
		        style="@style/dateTimeText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/label_deal_active_time" />

<!-- 		    
		    <EditText
		        android:id="@+id/edit_aed_deal_active_toDate"
		        android:layout_width="@dimen/aed_from_to_date_time"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_deal_active_date"
		        android:inputType="datetime" >
	    	</EditText>

		    <EditText
		        android:id="@+id/edit_aed_deal_active_toTime"
		        android:layout_width="@dimen/aed_from_to_date_time"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_deal_active_time"
		        android:inputType="time" >
	    	</EditText>
		    	        	        
 -->	
    </TableRow>
	   		    
    <TextView
        android:id="@+id/label_aed_placement"
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_placement"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	   	<CheckBox 
		        android:id="@+id/cb_regular"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_placement_regular" >
		   </CheckBox>
		    <CheckBox 
		        android:id="@+id/cb_special"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_placement_special" >
		   </CheckBox>
		
		    <CheckBox 
		        android:id="@+id/cb_top_listing"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_placement_top_listing" >
		   </CheckBox>
		   <CheckBox 
		        android:id="@+id/cb_home_page_banner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_placement_home_page_banner" >
		   </CheckBox>
		
		   <CheckBox 
		        android:id="@+id/cb_category_banner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_placement_category_banner" >
		   </CheckBox>

	<TextView
        android:id="@+id/label_aed_push_settings"
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_push_settings"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<!-- 	   <TableRow
	        android:id="@+id/table_row_sms_count"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/label_aed_push_settings" >
	       	
 		    <TextView
		        android:id="@+id/label_aed_deal_SMS"
		        style=""
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_push_settings_SMS"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
 -->		     
		    <EditText
		        android:id="@+id/edit_aed_deal_SMS"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_push_settings_SMS"
		        android:inputType="number" />
		    	
<!-- 	   </TableRow>
	   <TableRow
	        android:id="@+id/table_row_email_count"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/table_row_sms_count" >
	       	
		    <TextView
		        android:id="@+id/label_aed_deal_email"
		        style=""
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_push_settings_email"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		     
 -->
 		    <EditText
		        android:id="@+id/edit_aed_deal_email"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/label_push_settings_email"
		        android:inputType="number" />
	
<!-- 	   </TableRow>
 -->	   			   		   	

</LinearLayout>
</ScrollView>